[gd_scene load_steps=2 format=2]

[ext_resource path="res://assets/ui/main_menu/main_menu.gd" type="Script" id=1]

[node name="lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="background" type="ColorRect" parent="."]
anchor_left = 0.35
anchor_top = 0.25
anchor_right = 0.65
anchor_bottom = 0.75
color = Color( 0.231373, 0.223529, 0.223529, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="name" type="LineEdit" parent="."]
anchor_left = 0.4
anchor_top = 0.3
anchor_right = 0.6
anchor_bottom = 0.35
margin_top = 0.500671
margin_bottom = 0.500671
text = "Brochacho"
max_length = 16
__meta__ = {
"_edit_lock_": true
}

[node name="ip" type="LineEdit" parent="."]
anchor_left = 0.4
anchor_top = 0.475
anchor_right = 0.6
anchor_bottom = 0.525
margin_top = 0.500671
margin_bottom = 0.500671
text = "138.67.70.123"
__meta__ = {
"_edit_lock_": true
}

[node name="joinButton" type="Button" parent="."]
anchor_left = 0.4
anchor_top = 0.575
anchor_right = 0.6
anchor_bottom = 0.625
text = "Connect"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="hostButton" type="Button" parent="."]
anchor_left = 0.4
anchor_top = 0.65
anchor_right = 0.6
anchor_bottom = 0.7
text = "Host"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ColorPicker" type="ColorPicker" parent="."]
anchor_left = 0.67
anchor_top = 0.1
anchor_right = 0.97
anchor_bottom = 0.9
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[connection signal="text_entered" from="ip" to="." method="_on_ip_text_entered"]
[connection signal="pressed" from="joinButton" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="hostButton" to="." method="_on_hostButton_pressed"]
